SLING-9670: add an assembly for the converter.